--- a/.github/workflows/nexe_builds.yml
+++ b/.github/workflows/nexe_builds.yml
@@ -7,9 +7,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         node:
-          - 12
           - 14
-          - 15
     runs-on: ${{ matrix.os }}
 
     name: Node ${{ matrix.node }} on ${{ matrix.os }}
@@ -30,5 +28,6 @@ jobs:
 
       - name: Builds
         run: |
-          nexe proxy-login-automator.js -t "linux-x64"
-          nexe proxy-login-automator.js -t "windows-x64-10.16.0"
+          nexe proxy-login-automator.js -t "linux-x64-14.15.3"
+          nexe proxy-login-automator.js -t "windows-x64-14.15.3"
+          nexe proxy-login-automator.js -t "mac-x64-14.15.3"
